fix error codes, prepare GET custom-domains in swagger
